# eopf-101

./: README.md  _quarto.yml  index.qmd  pyproject.toml
.github/workflows/: delete-old-image-tags.yml  nightly-render-check.yml  nightly_render_alert.py  publish.yml  test.yml
02_about_eopf_zarr/: 21_what_is_zarr.qmd  22_zarr_structure_S1GRD.ipynb  23_S1_basic_operations.ipynb  24_zarr_struct_S2L2A.ipynb  25_zarr_struct_S3.ipynb
04_eopf_and_stac/: 42_eopf_stac_zarr_tutorial.qmd  43_eopf_stac_connection.ipynb  44_eopf_stac_xarray_tutorial.ipynb
05_zarr_tools/: 51_eopf_stac_r.ipynb  51_eopf_stac_r.qmd  52_eopf_stac_qgis.qmd  53_eopf_zarr_r.ipynb  53_eopf_zarr_r.qmd  54_eopf_zarr_r_examples.ipynb  54_eopf_zarr_r_examples.qmd  57_rstac_gdalcubes.qmd
06_eopf_zarr_in_action/: 61_sardinia_s2_tfci.ipynb  62_sardinia_s3_lst.ipynb  63_sardinia_dNBR.ipynb  64_flood_mapping_valencia.ipynb  65_coastal_water_dynamics_s1.ipynb  65_create_overviews.ipynb  66_use_overviews.ipynb  67_reservoir_surface_monitoring.ipynb  68_vegetation_anomalies.ipynb  69_coastal_water_dynamics_s1.ipynb  vegetation_anomalies_utils.py  zarr_s1_utils.py
06_eopf_zarr_in_action/.ipynb_checkpoints/: 68_vegetation_anomalies-checkpoint.ipynb  zarr_wf_utils-checkpoint.py
06_eopf_zarr_in_action/data/: DE-Hai.csv  DE-Tha.csv
deployment/: environment.yaml
