[build-system]
requires = ["setuptools==81.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eopf-101"
version = "0.1.0"
description = "EOPF 101 - A toolkit for working with Sentinel data in Zarr format"
requires-python = ">=3.11,<3.14"
readme = "README.md"
authors = [
    { name = "Emmanuel Mathot", email = "emmanuel@developmentseed.com" },
    { name = "Gisela Romero Candanedo" },
    { name = "Julia Wagemann" },
    { name = "Ciaran Sweet", email = "ciaran@developmentseed.org" },
    { name = "Felix Delattre", email = "felix@developmentseed.org" },
]
license = "MIT"
keywords = [
    "EOPF",
    "Sentinel",
    "Zarr",
    "Earth Observation",
    "Remote Sensing",
    "Data Science",
    "Geospatial",
    "Python",
    "Jupyter",
    "Data Analysis",
]

dependencies = [
    "setuptools==81.0.0",
    "jupyter>=1.1.1",
    "zarr>=3.1.1",
    "pystac>=1.13.0",
    "pystac-client",
    "numpy>=2.3.1",
    "pandas>=2.0.2",
    "matplotlib>=3.10.3",
    "rioxarray>=0.14.1",
    "stackstac>=0.4.4",
    "xarray>=2025.10.1",
    "distributed>=2024.5.0",
    "dask>=2024.5.0",
    "ipykernel>=6.23.1",
    "llvmlite>=0.44.0",
    "requests",
    "nbstripout",
    "pyproj>=3.4.1",
    "cartopy>=0.22.0",
    "scikit-image>=0.21.0",
    "shapely>=2.0.1",
    "quarto>=0.1.0",
    "s3fs",
    "sarsen",
    "xarray_sentinel",
    "earthpy",
    "dask[distributed]",
    "ipywidgets>=8.0.0",     # Required for interactive visualization (66_use_overviews.ipynb)
    "ipyleaflet>=0.17.0",    # Required for web map visualization (66_use_overviews.ipynb)
    "pillow>=10.0.0",        # Required for ipyleaflet_multiscales (RGB image encoding)
    "nbgitpuller>=1.2.2",
    "dask-labextension>=7.0.0",
    "jupyter-leaflet>=0.20.0",
    "jupyterlab-git>=0.51.2",
    "hvplot>=0.12.2",
    "session-info>=1.0.1",
    "odc>=0.1.3",
    "odc-geo>=0.5.0",
    "geopandas>=1.1.2",
    "urllib3>=2.6.3",
    "nbconvert>=7.17.0",
    "aiohttp>=3.13.3",
    "fonttools>=4.60.2",
    "bokeh>=3.8.2"
]

[tool.setuptools]
packages = ["deployment", "img"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.jpg", "*.PNG", "*.webp"]

[project.urls]
Homepage = "https://eopf-toolkit.github.io/eopf-101/"
Source = "https://github.com/eopf-toolkit/eopf-101"
